# my-jenkins-work

./: .gitignore  Jenkinsfile  Makefile  create_jenkins.sh  create_jenkins_default.sh  jenkins-values.yaml  kind-v4.yaml  kind-v6.yaml  memo.txt  pyproject.toml
src/: main.py
