[tool.poetry]
name = "my-jenkins-work"
version = "0.1.0"
description = ""
authors = ["t_ishikawa <tissi0708@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
isort = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
